# streams_demo

./: .gitignore  Cargo.toml  README.md
src/: http_calls.rs  main.rs
