[package]
name = "web-app"
version = "0.1.0"
authors = ["lolita <chekemloli@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.8.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
postgres = "0.19.1"
chrono = "0.4"
